# anchor

./: .gitignore  .vercelignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  backlog.md  eslint.config.js  index.html  package-lock.json  package.json  plan.md  playwright.config.ts  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md
.github/workflows/: ci.yml
docs/: distribution.md
public/: robots.txt  sitemap.xml
scripts/: build-dmg.sh  notarize-dmg.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  config.rs  lib.rs  main.rs  notes.rs  watcher.rs
src/components/: ErrorBoundary.tsx  ThemeProvider.tsx
src/components/comments/: AppliedEdit.tsx  CommentInput.tsx  CommentMessage.tsx  CommentSidebar.tsx  CommentThread.tsx  DocumentChat.tsx  SuggestedEdit.tsx
src/components/documents/: DocumentSidebar.tsx
src/components/editor/: AISettingsDialog.tsx  CommentBubbleMenu.tsx  Editor.tsx  (+4 more)
src/extensions/: comment-mark.ts  edit-highlight.ts
src/hooks/: useAIChat.ts  useAISettings.ts  useEditorPreferences.ts
src/lib/: ai-cli.ts  ai-errors.ts  context-builder.ts  document-store.ts  editor-preferences.ts  export-markdown.ts  font-loader.ts  markdown.ts  notes-folder.ts  notes-fs.ts  persistence.ts  settings.ts  triggers.ts
src/types/: index.ts
tests/: ai-errors.spec.ts  chat-intent.spec.ts  context-router.spec.ts  editor-browser.spec.ts  markdown.spec.ts  settings.spec.ts  thread-history.spec.ts
(+17 files in other folders)
